--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@storyblok/react": "^4.4.0",
+    "@stripe/stripe-js": "^4.9.0",
+    "framer-motion": "^12.4.10",
+    "marked": "^15.0.7",
+    "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "storyblok-js-client": "^6.10.7",
+    "stripe": "^17.3.1",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
