--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "storyblok-js-client": "^6.10.7",
     "stripe": "^17.3.1",
     "swiper": "^11.2.4"
